--- a/exercices.html
+++ b/exercices.html
@@ -94,7 +94,8 @@ a:visited{color:#AAD2E4;}
 
 </style>
 <link rel="stylesheet" href="python_syntax_cours.css">
-<script type="text/javascript" src="brython_dist.js"></script>
+<script type="text/javascript" src="brython.js"></script>
+<script type="text/javascript" src="brython_stdlib.js"></script>
 
 </head>
 <body onLoad="brython(1)">
