--- a/cours_python.html
+++ b/cours_python.html
@@ -8,20 +8,19 @@
 
 <style>
 body,td {font-family: Arial;
-    font-size:1.2em;
+    font-size:1.3em;
 }
     
 #cours {
     position: relative;
-    margin-left:auto;
-    margin-right:auto;
-    width:900px;
+    margin-left:10%;
+    margin-right:10%;
+    width:80%;
     margin-top:20px;
     padding-top:5px;
     padding-left:40px;
     padding-right:40px;
-    min-height:650px;
-    font-size:18px;
+    font-size:1em;
     background-color:#FFF;
 }
 
@@ -39,27 +38,30 @@ body,td {font-family: Arial;
 }
 
 #cours pre.marked{
-    background-color:#ddd;
-    font-size: 0.9em;
+    background-color:#222;
+    color: #fff;
+    font-size: 1em;
     margin-left:40px;
     margin-right:40px;
     padding: 7px;
     border-style: solid;
     border-color: #888;
     border-width: 1px;
-    width: auto;
+    width: 50em;
 }
+
 .python{
-    background-color:#ddd;
-    font-size: 0.8em;
-    font-weight:bold;
-    margin-left:40px;
-    margin-right:40px;
+    background-color:#eee;
+    font-family: "Consolas", "Courier New";
+    font-size: 1em;
+    font-weight: bold;
+    margin-left: 40px;
+    margin-right: 40px;
     padding: 7px;
     border-style: solid;
     border-color: #000;
     border-width: 1px;
-    border-radius:15px;
+    border-radius: 5px;
     width: auto;
 }
 .raw{
@@ -87,7 +89,7 @@ strong{
     text-align: center;
     position:absolute;
     bottom:25px;
-    width:890px;
+    width:90%;
     font-weight:bold;
     color:#7AA2E4;
     
@@ -95,15 +97,15 @@ strong{
 }
 #timeline {
     text-align: center;
-    position:absolute;
-    bottom:5px;
-    width:890px;
-    font-weight:bold;
-    color:#FFB740;
-    background-color:#7AA2E4;
-    height:10px;
-    padding-left:5px;
-    padding-right:5px;
+    position: absolute;
+    bottom: 5px;
+    width: 90%;
+    font-weight: bold;
+    color: #FFB740;
+    background-color: #7AA2E4;
+    height: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 #tl_pos{
     text-align: center;
@@ -123,11 +125,10 @@ strong{
 
 </head>
 <body onLoad="brython(1)">
-
 <script type="text/python">
 from browser import document
 import slideshow
-print(slideshow)
+
 slideshow.show('cours_python.pss', document['cours'])
 
 </script>
