--- a/cours_python2.html
+++ b/cours_python2.html
@@ -8,21 +8,21 @@
 
 <style>
 body,td {font-family: Arial;
-    font-size:12px;
+    font-size:1.3em;
     color:#AAD2E4;
 }
     
 #cours {
     position: relative;
-    margin-left:auto;
-    margin-right:auto;
-    width:800px;
+    margin-left:10%;
+    margin-right:10%;
+    width:80%;
     margin-top:20px;
     padding-top:5px;
     padding-left:40px;
     padding-right:40px;
-    min-height:600px;
-    font-size:18px;
+    min-height:650px;
+    font-size:1em;
     background:linear-gradient(#455C9E,#352C6E);
 }
 
@@ -71,7 +71,7 @@ strong{
     text-align: center;
     position:absolute;
     bottom:5px;
-    width:790px;
+    width:90%;
     font-weight:bold;
     color:#FFB740;
     background-color:#7AA2E4;
