Add Monospace to fonts for Python code

--- a/cours_python.html
+++ b/cours_python.html
@@ -52,7 +52,7 @@ body,td {font-family: Arial;
 
 .python{
     background-color:#eee;
-    font-family: "Consolas", "Courier New";
+    font-family: "Consolas", "Courier New", "Monospace";
     font-size: 1em;
     font-weight: bold;
     margin-left: 40px;
