Change highlighting of Python console

--- a/exercices.html
+++ b/exercices.html
@@ -63,6 +63,18 @@ body,td {font-family: Arial;
     width: auto;
     color: #111;
 }
+.python span.python-string{
+    color: blue;
+}
+.python span.python-comment{
+    color: green;
+}
+.python span.python-keyword{
+    color: purple;
+}
+.python span.python-builtin{
+    color: #963;
+}
 
 code {color: #FFF;
     font-weight:bold;
