--- a/cours_python2.html
+++ b/cours_python2.html
@@ -45,6 +45,64 @@ body,td {font-family: Arial;
     padding: 7px;
     color:#2A4480;
 }
+
+.python-console{
+    background-color:#000;
+    font-family: "Consolas", "Courier New", "Monospace";
+    color: #fff;
+    margin-left:40px;
+    margin-right:40px;
+    padding: 7px;
+    border-style: solid;
+    border-color: #888;
+    border-width: 1px;
+    width: 50em;
+}
+.python-console span.python-prompt{
+    color: #ff6;
+}
+.python-console span.python-string{
+    color: #aaf;
+}
+.python-console span.python-comment{
+    color: #0f0;
+}
+.python-console span.python-keyword{
+    color: #f66;
+}
+.python-console span.python-builtin{
+    color: #f69;
+}
+
+.python{
+    background-color:#eee;
+    color: #000;
+    font-family: "Consolas", "Courier New", "Monospace";
+    font-size: 1em;
+    font-weight: bold;
+    margin-left: 40px;
+    margin-right: 40px;
+    padding: 7px;
+    border-style: solid;
+    border-color: #000;
+    border-width: 1px;
+    border-radius: 5px;
+    width: auto;
+}
+
+.python span.python-string{
+    color: blue;
+}
+.python span.python-comment{
+    color: green;
+}
+.python span.python-keyword{
+    color: purple;
+}
+.python span.python-builtin{
+    color: #963;
+}
+
 code {color: #FFF;
     font-weight:bold;
 }
@@ -61,7 +119,7 @@ strong{
     text-align: center;
     position:absolute;
     bottom:25px;
-    width:790px;
+    width:90%;
     font-weight:bold;
     color:#7AA2E4;
     
