--- a/cours_python.html
+++ b/cours_python.html
@@ -105,6 +105,18 @@ body,td {font-family: Arial;
     color: #963;
 }
 
+.console{
+    background-color:#000;
+    font-family: "Consolas", "Courier New", "Monospace";
+    color: #fff;
+    margin-left:40px;
+    margin-right:40px;
+    padding: 7px;
+    border-style: solid;
+    border-color: #888;
+    border-width: 1px;
+    width: 50em;
+}
 .raw{
     font-size: 0.9em;
     font-weight:bold;
@@ -114,7 +126,9 @@ body,td {font-family: Arial;
     width: auto;
 }
 
-code {color: #339;
+code {
+    color: #339;
+    font-size:1.2em;
     font-weight:bold;
 }
 em{
