--- a/exercices.html
+++ b/exercices.html
@@ -45,7 +45,7 @@ body,td {font-family: Arial;
     border-style: solid;
     border-color: #888;
     border-width: 1px;
-    width: 50em;
+    width: 70%;
 }
 
 .python{
