--- a/cours_python.html
+++ b/cours_python.html
@@ -60,7 +60,7 @@ body,td {font-family: Arial;
     border-style: solid;
     border-color: #888;
     border-width: 1px;
-    width: 50em;
+    width: 70%;
 }
 .python-console span.python-prompt{
     color: #ff6;
