--- a/cours_python.html
+++ b/cours_python.html
@@ -4,10 +4,14 @@
 <meta name="description" content="Introduction to Python written in Brython www.brython.info">
 <meta name="keywords" content="Python,Brython">
 <meta name="author" content="Pierre Quentel">
+<link rel="stylesheet" type="text/css"
+  href="https://fonts.googleapis.com/css?family=Roboto">
+
 <meta charset="iso-8859-1">
 
 <style>
-body,td {font-family: Arial;
+body,td {
+    font-family: Roboto, Arial;
     font-size:1.2em;
 }
     
@@ -60,7 +64,7 @@ body,td {font-family: Arial;
     border-style: solid;
     border-color: #888;
     border-width: 1px;
-    width: 70%;
+    width: auto;
 }
 .python-console span.python-prompt{
     color: #ff6;
@@ -115,7 +119,7 @@ body,td {font-family: Arial;
     border-style: solid;
     border-color: #888;
     border-width: 1px;
-    width: 50em;
+    width: auto;
 }
 .raw{
     font-size: 0.9em;
@@ -143,12 +147,13 @@ strong{
 #footer {
     text-align: center;
     position:absolute;
-    bottom:25px;
+    bottom:10px;
     width:90%;
     font-weight:bold;
     color:#7AA2E4;
     padding:5px;
 }
+
 #timeline {
     text-align: center;
     position: absolute;
