--- a/cours_python.html
+++ b/cours_python.html
@@ -64,7 +64,7 @@ body,td {
     border-style: solid;
     border-color: #888;
     border-width: 1px;
-    width: auto;
+    width: 50em;
 }
 .python-console span.python-prompt{
     color: #ff6;
